# SyllabusHub

./: .gitignore  README.md  docker-compose.yml
Dataset/: GTCoursesWebScrape.py  gatech_courses.numbers
backend/: http_cache.sqlite-journal  pyproject.toml
backend/backend/: __init__.py  app.py  canvas.py  courses.py  firebase.py  nlpautotagging.py  rec.py  recommendations_api.py  supabase.py  tag_api.py  test_api.py  upload.py  users.py
backend/backend/Dataset/: gatech_courses.csv
backend/backend/config/: SupabaseSA.example.json  SyllabusHubFirebaseSA.example.json  account_type.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  custom.scss  main.tsx  supabaseClient.ts
frontend/src/clients/: canvas.tsx  firebase.tsx  supabase.ts
frontend/src/components/: CanvasImportCard.tsx  CanvasLink.tsx  CanvasSync.tsx  LoginDropdown.tsx  Navbar.tsx  UserInfo.tsx
frontend/src/firebase/: firebase.tsx
frontend/src/types/: FileTypes.tsx  db.tsx  relations.tsx
frontend/src/views/: FileUpload.tsx  Home.tsx  Login.tsx  Recommendations.tsx  UploadDetails.tsx  ViewFiles.tsx
