[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vidyadharan, Aditya Ram",email = "vidyadharan@gatech.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]

[tool.poetry]
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
