[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Vidyadharan, Aditya Ram",email = "vidyadharan@gatech.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "firebase-admin (>=6.6.0,<7.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "flask-cors (>=5.0.0,<6.0.0)",
    "supabase (>=2.13.0,<3.0.0)",
    "canvasapi (>=3.3.0,<4.0.0)",
    "requests-cache (>=1.2.1,<2.0.0)",
    "pdfminer-six (>=20240706,<20240707)",
    "redis (>=5.2.1,<6.0.0)",
    "weasyprint (>=64.1,<65.0)",
    "sentence-transformers (>=4.0.2,<5.0.0)",
    "chromadb (>=1.0.3,<2.0.0)",
    "google-generativeai (>=0.8.4,<0.9.0)",
]

[tool.poetry]
package-mode = false



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
